<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.soham.sihuser.mainpage"
    android:background="@color/com_facebook_button_border_color_focused">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notification"
        android:background="@color/tabcolour"
        android:layout_height="45dp">

        <Button
            android:id="@+id/profilepage"
            android:background="@mipmap/ic_home_black_24dp"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/complain"
            android:background="@mipmap/ic_feedback_black_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="90dp" />

        <Button
            android:id="@+id/notificationpage"
            android:background="@mipmap/notification"
            android:layout_alignParentBottom="true"
            android:layout_width="50dp"
            android:layout_marginLeft="90dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <TextView
        android:text="@string/user_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/profile"
        android:background="@color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="320dp">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:text="@string/power_sch"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView10"
        android:textColor="@android:color/holo_red_light"
        android:layout_width="250dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/jan24"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignStart="@+id/textView2"
        android:id="@+id/imageView4" />

    <TextView
        android:text="@string/user_extensiontime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="21dp"
        android:id="@+id/textView11"
        android:textColor="@android:color/black"
        android:layout_alignEnd="@+id/textView10" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/dec22"
        android:id="@+id/imageView9"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignStart="@+id/imageView4" />

</RelativeLayout>
