<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.soham.sihuser.notification"
    android:background="@color/com_facebook_button_border_color_focused">

    <TextView
        android:text="Appointment of Secretary in the Bureau of Energy Efficiency on deputation Basis- Application for - regarding "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="71dp"
        android:id="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:text="@string/invite_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="33dp"
        android:id="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/fill_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="45dp"
        android:id="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/mar16"
        android:id="@+id/imageView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/textView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/mar6"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/imageView5"
        android:id="@+id/imageView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/jan31"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignStart="@+id/imageView6"
        android:id="@+id/imageView7" />

    <TextView
        android:text="@string/power_sch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView7"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="33dp"
        android:id="@+id/textView9"
        android:textColor="@android:color/holo_red_light" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/jan24"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignStart="@+id/imageView7"
        android:id="@+id/imageView8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/tabcolour"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/profilepage"
            android:background="@mipmap/ic_home_black_24dp"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/complain"
            android:background="@mipmap/ic_feedback_black_24dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="90dp" />

        <Button
            android:id="@+id/notificationpage"
            android:background="@mipmap/notification"
            android:layout_alignParentBottom="true"
            android:layout_width="50dp"
            android:layout_marginLeft="90dp"
            android:layout_height="40dp" />

    </LinearLayout>


</RelativeLayout>
